DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2003-03-31 patrickh     Removed unneeded second argument from the function
                        gmtl::makeInverse<>().  Changed the first argument of
                        same to take a matrix by reference instead of by value.
                        NEW VERSION: 0.2.2
2003-03-16 subatomic    added operator/=( Quat, Quat )
                        added operator/( Quat, Quat )
                        fixed div( Quat, Quat )
                        fixed quaternion multiplication ordering bug (again?)
2003-03-16 subatomic    added intersect( Sphere, Point )
                        added intersect( Sphere, LineSeg )
                        added intersect( Sphere, Ray )
                        added distanceSquared( LineSeg, Point )
2003-03-15 nonchocoboy  NEW VERSION: 0.2.1
2003-03-15 nonchocoboy  Replaced gmtl::version variable with a
                        gmtl::getVersion() inlined method to avoid mulitply
                        defined linker errors.
2003-03-13 jahare       Fixed quaternion multiplication ordering bug.
2003-03-10 jahare       Added Point *= Matrix, Point *= Quat, and Vec *= Quat
                        operators.
2003-03-03 patrickh     NEW VERSION: 0.2.0
2003-02-24 allenb       Changed Matrix::op[] to allow element access using
                        row, column ordering.  The access element directly
                        use Matrix::mData.
2003-02-21 nonchocoboy  Added gmtl.h convenience header.
2003-02-21 nonchocoboy  gmtl::Math::sign will now take any type as an argument.
2003-02-21 allenb       Fixed bug where direction cosines were being computed
                        incorrectly. The method was actually computing the
                        inverse of the correct value.
2003-02-06 nonchocoboy  Replaced build system with an SCons-based build system.
2003-01-10 subatomic    Added new Ray.h