@@ -1,5 +1,7 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2003-04-01 subatomic    April Fools.
+                        added setPerspective, setFrustum
 2003-03-31 patrickh     Removed unneeded second argument from the function
                         gmtl::makeInverse<>().  Changed the first argument of
                         same to take a matrix by reference instead of by value.
